--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container">
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Tivo</a> -->
+            <a class="navbar-brand logo-text page-scroll" href="index.html">App-Name</a>
 
             <!-- Image Logo -->
 <!--             <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a>  -->
